<resources>
    <string name="app_name">AndrodServiceDemo</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="get_random_number">Get Random Number</string>
    <string name="bind_service_with_in_two_apps">Bind service with in two apps</string>
    <string name="bind_service_with_in_aap">Bind service with in aap</string>
    <string name="bind_service">Bind Service</string>
    <string name="un_bind_service">Un Bind service</string>
    <string name="txt_service_not_started">Service is not Started</string>
    <string name="title_activity_intent_service">IntentServiceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intent_service">Intent Service &amp; Foreground Service</string>
    <string name="schedule_job_service">Schedule Job Service</string>
    <string name="stop_scheduled_service">Stop Scheduled Service</string>
    <string name="job_scheduler">Job Scheduler</string>
</resources>