<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10dp"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartService"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/_10dp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartService"
        android:text="@string/bind_service_with_in_aap"
        android:id="@+id/btnBindServiceLocal"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/_10dp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBindServiceLocal"
        android:text="@string/bind_service_with_in_two_apps"
        android:id="@+id/btnBindServiceRemote"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/_10dp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBindServiceRemote"
        android:text="@string/intent_service"
        android:id="@+id/btnIntentService"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/_10dp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIntentService"
        android:text="@string/job_scheduler"
        android:id="@+id/btnJobService"/>



</androidx.constraintlayout.widget.ConstraintLayout>